--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ If your project grows in size, this option is available. This method has
 <span class="line"><span style="color:#B392F0">  render</span><span style="color:#E1E4E8">() {</span></span>
 <span class="line"><span style="color:#F97583">    return</span><span style="color:#E1E4E8"> &#x3C;</span><span style="color:#85E89D">h3</span><span style="color:#E1E4E8">> Lets go for a &#x3C;</span><span style="color:#79B8FF">FaBeer</span><span style="color:#E1E4E8"> />? &#x3C;/</span><span style="color:#85E89D">h3</span><span style="color:#E1E4E8">></span></span>
 <span class="line"><span style="color:#E1E4E8">  }</span></span>
-<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre> <h2>More info</h2> <p> <a href="https://github.com/react-icons/react-icons">GitHub &#8599;</a> </p>  </div>  </main>  <script>
+<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre> <h2>More info</h2> <p> <a href="https://github.com/react-icons/react-icons" target="_blank">GitHub &#8599;</a> </p>  </div>  </main>  <script>
       function onButtonClick() {
         const sidebar = document.querySelector("ul.sidebar--links");
         sidebar.classList.toggle("active");
